2007-07-15  Ted Bullock <tbullock@canada.com>

	* timer.c, timer.h, httperf.c: Fixed memory leak associated with timers not being
	freed

2007-06-03  Ted Bullock <tbullock@canada.com>

	* event.c and event.h: Moved to localevent.c and localevent.h for integration with
	libevent (which has a default header of event.h)

2007-06-03  Ted Bullock <tbullock@canada.com>

	* configure.ac: Add configuration to use libevent

2007-06-03  Ted Bullock <tbullock@canada.com>

	* configure.ac: Remove unnecessary configuration cruft and configure httperf
	to be built in c99 mode

2007-05-27  Ted Bullock <tbullock@canada.com>

	* man/httperf.1: Fixed man page typo for --wset option (needed --uri, not --wset)

2007-05-27  Andrew Hateley <andrew.hateley@gmail.com>

	* man/httperf.1: New documentation regarding the variable periodic rates
	* src/httperf.c: New functionality for variable periodic rates
	* src/httperf.h: ditto
	* src/timer.c: ditto

2007-03-31  Ted Bullock <tbullock@canada.com>

	* *.c and *.h: Adjusted license to explicitly list HP copyright as
	Copyright 2000-2007 Hewlett-Packard Company

2007-02-07  Ted Bullock  <tbullock@canada.com>

	* AUTHORS: wsseslog crash fix was actually written by David Mosberger

2007-02-07  Ted Bullock  <tbullock@canada.com>

	* AUTHORS: Removed Durval Menezes from AUTHORS file since his fix
	has been re-written by Theodore Bullock

2007-02-07  Ted Bullock  <tbullock@canada.com>

	* *.c and *.h: Slightly adjusted license to explicitly point out AUTHORS file
	as official list of authors

2007-02-07  Ted Bullock  <tbullock@canada.com>

	* httperf.1: Added correction to man page to include a missing
	--wsess identification

2007-01-26  Ted Bullock  <tbullock@canada.com>

	* getopt.c and getopt1.c: Re-Added the to the build process
	httperf now compiles on Linux, OpenBSD, FreeBSD, Solaris, HP-UX 11i
	with cc and gcc and (with cc and gcc)

2007-01-26  Ted Bullock  <tbullock@canada.com>
