@@ -1,5 +1,5 @@
 # what flags you want to pass to the C compiler & linker
-AM_CFLAGS = -I$(srcdir)/..
+AM_CFLAGS = -I$(srcdir)/.. -I$(srcdir)/../lib
 AM_LDFLAGS =
 
 noinst_LIBRARIES = libgen.a
