@@ -35,10 +35,13 @@
 /* Causes calls to make a request to the fixed URI specified by
    PARAM.URI.  */
 
+#include "config.h"
+
 #include <assert.h>
 #include <stdio.h>
 #include <string.h>
 
+#include <generic_types.h>
 #include <httperf.h>
 #include <call.h>
 #include <localevent.h>
