@@ -66,6 +66,8 @@
    Any comment on this module contact eranian@hpl.hp.com or
    davidm@hpl.hp.com.  */
 
+#include "config.h"
+
 #include <assert.h>
 #include <errno.h>
 #include <fcntl.h>
@@ -75,8 +77,7 @@
 #include <sys/stat.h>
 #include <unistd.h>
 
-#include <sys/types.h>
-
+#include <generic_types.h>
 #include <httperf.h>
 #include <call.h>
 #include <core.h>
