@@ -39,6 +39,8 @@
    This is NOT a high performance workload generator!  Use it only for
    non-performance critical tests.  */
 
+#include "config.h"
+
 #include <assert.h>
 #include <ctype.h>
 #include <errno.h>
@@ -46,6 +48,7 @@
 #include <stdlib.h>
 #include <string.h>
 
+#include <generic_types.h>
 #include <httperf.h>
 #include <call.h>
 #include <conn.h>
