@@ -2,5 +2,5 @@
 AM_LDFLAGS =
 
 noinst_LIBRARIES = libutil.a
-libutil_a_SOURCES = getopt.c getopt.h getopt1.c ssl_writev.c
+libutil_a_SOURCES = getopt.c getopt.h getopt1.c ssl_writev.c generic_types.h
 
