@@ -31,6 +31,10 @@
     Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  
     02110-1301, USA
 */
+
+#include "config.h"
+
+#include <generic_types.h>
 #include <httperf.h>
 #include <localevent.h>
 #include <sess.h>
