@@ -1,5 +1,5 @@
 # what flags you want to pass to the C compiler & linker
-AM_CFLAGS = -I$(srcdir)/.. -I$(srcdir)/../gen
+AM_CFLAGS = -I$(srcdir)/.. -I$(srcdir)/../gen -I$(srcdir)/../lib
 
 noinst_LIBRARIES = libstat.a
 libstat_a_SOURCES = basic.c sess_stat.c print_reply.c stats.h
